tests/ui/error-codes/E0117.stderr
error[E0117]: only traits defined in the current crate can be implemented for primitive types
  --> $DIR/E0117.rs:1:1
   |
LL | impl Drop for u32 {}
   | ^^^^^^^^^^^^^^---
   |               |
   |               `u32` is not defined in the current crate
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead

error[E0120]: the `Drop` trait may only be implemented for local structs, enums, and unions
  --> $DIR/E0117.rs:1:15
   |
LL | impl Drop for u32 {}
   |               ^^^ must be a struct, enum, or union in the current crate

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0117, E0120.
For more information about an error, try `rustc --explain E0117`.
